Trabajo con clases y requests